UI improvement & small fix with edit deck vc

--- a/MTGPrices/Info.plist
+++ b/MTGPrices/Info.plist
@@ -39,6 +39,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MPlantin.ttf</string>
+		<string>MPlantin Italic.otf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
